--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Home Page</h1>
-</body>
-</html>
+{% extends '_base.html' %}
+
+{% block title %}Home Page{% endblock %}
+
+{% block content %}
+    <h2>Home</h2>
+    <p>Welcome to Online Shop</p>
+{% endblock %}
