Update AboutUs Page

--- a/pages/templates/pages/aboutus.html
+++ b/pages/templates/pages/aboutus.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>About US</title>
-</head>
-<body>
+{% extends '_base.html'%}
+{% block title %}About US{% endblock %}
+{% block content %}
     <h1>About US Page</h1>
-</body>
-</html>
+{% endblock %}
