--- a/templates/_base.html
+++ b/templates/_base.html
@@ -45,7 +45,7 @@
                     <div class="col-xl-9 col-lg-8 col-5 col-xs-0 col-none col-sm-block p-0">
                         <nav class="main-navigation">
                             <div class="site-branding" style="margin-right: 30px;">
-                                <a href="index.html" class="logo">
+                                <a href="{% url 'product_list' %}" class="logo">
                                     <figure class="logo--normal d-none d-sm-block">
                                         <img class="px-5" src="assets/img/codingyar_logo.png"
                                              style="max-height: 50px; margin-bottom: -15px;" alt="Logo">
@@ -55,7 +55,7 @@
                             <div class="mainmenu-nav d-none d-lg-block w-100 pr-3">
                                 <ul class="mainmenu d-lg-flex jusity-content-end jusity-content-lg-start pt-4">
                                     <li class="mainmenu__item menu-item-has-children active">
-                                        <a href="index.html" class="mainmenu__link">
+                                        <a href="{% url 'product_list' %}" class="mainmenu__link">
                                             <span class="mm-text">خانه</span>
                                         </a>
                                     </li>
@@ -70,7 +70,7 @@
                                         </a>
                                     </li>
                                     <li class="mainmenu__item">
-                                        <a href="contact-us.html" class="mainmenu__link">
+                                        <a href="{% url 'aboutus' %}" class="mainmenu__link">
                                             <span class="mm-text">تماس با ما</span>
                                         </a>
                                     </li>
