--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -77,7 +77,7 @@
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-reviews-tab"
                                        data-toggle="tab" href="#nav-reviews" role="tab" aria-selected="true">
-                                        <span>نظرات (۱)</span>
+                                        <span>نظرات ({{ product.comments.count }})</span>
                                     </a>
                                 </div>
                                 <div class="tab-content product-data-tab__content" id="product-tabContent">
@@ -116,7 +116,7 @@
                                     <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
                                          aria-labelledby="nav-reviews-tab">
                                         <div class="product-reviews">
-                                            <h3 class="review__title">۱ نظر برای لباس تابستانی</h3>
+                                            <h3 class="review__title">{{ product.comments.count }} نظر برای لباس تابستانی</h3>
                                             <ul class="review__list">
                                                 {% for comment in product.comments.all %}
                                                     <li class="review__item">
