--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -116,7 +116,7 @@
                                     <div class="tab-pane fade" id="nav-reviews" role="tabpanel"
                                          aria-labelledby="nav-reviews-tab">
                                         <div class="product-reviews">
-                                            <h3 class="review__title">{{ product.comments.count }} نظر برای لباس تابستانی</h3>
+                                            <h3 class="review__title">{{ product.comments.count }} نظر برای <b>{{ product.title }}</b></h3>
                                             <ul class="review__list">
                                                 {% for comment in product.comments.all %}
                                                     <li class="review__item">
