--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -3,6 +3,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% load comment_tags %}
+{% load i18n %}
 
 {% block title %}Product Detail{% endblock %}
 {% block content %}
@@ -14,7 +15,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column">
-                            <h1 class="page-title">جزئیات محصول «{{ product.title }}»</h1>
+                            <h1 class="page-title">{% trans 'Product detail of' %} «{{ product.title }}»</h1>
                         </div>
                     </div>
                 </div>
@@ -41,7 +42,7 @@
                                 <div class="my-5 py-5 product-price-wrapper mb--25">
                                     <span class="money text-success">{{ product.price }}</span>
                                     <span class="price-separator">-</span>
-                                    <span class="money old-price text-danger">۲۱۰,۰۰۰ تومان</span>
+                                    <span class="money old-price text-danger">۲۱۰,۰۰۰ {% trans '$' %}</span>
                                 </div>
                                 <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
                                     <div class="quantity-wrapper d-flex justify-content-start">
@@ -52,11 +53,11 @@
                                     </div>
                                     <button type="button" class="btn btn-small btn-bg-red btn-color-white btn-hover-2"
                                             onclick="window.location.href='cart.html'">
-                                        اضافه به سبد خرید
+                                        {% trans 'Add To Cart' %}
                                     </button>
                                 </div>
                                 <div class="product-footer-meta mt-5 pt-5">
-                                    <p><span class="m-0">دسته بندی ها:</span>
+                                    <p><span class="m-0">{% trans 'Categories' %}:</span>
                                         <a href="shop.html">لباس</a>,
                                         <a href="shop.html">تابستانی</a>,
                                         <a href="shop.html">گرم</a>,
@@ -72,7 +73,7 @@
                                 <div class="nav nav-tabs product-data-tab__head" id="product-tab" role="tablist">
                                     <a class="m-0 product-data-tab__link nav-link active" id="nav-description-tab"
                                        data-toggle="tab" href="#nav-description" role="tab" aria-selected="true">
-                                        <span>توضیحات محصول</span>
+                                        <span>{% trans 'Product Description' %}</span>
                                     </a>
                                     <a class="m-0 product-data-tab__link nav-link" id="nav-info-tab" data-toggle="tab"
                                        href="#nav-info" role="tab" aria-selected="true">
@@ -154,12 +155,14 @@
                                                 <div class="row">
                                                     <div class="border-top py-5 w-100"></div>
                                                     <div class="col-lg-8 m-auto">
-                                                        <span class="reply-title pull-right">نظر خود را بنویسید</span>
+                                                        <span class="reply-title pull-right">
+                                                            {% trans 'Write your comment' %}
+                                                        </span>
                                                         <br>
                                                         <form action="{% url 'comment_create' product.id %}" method="POST">
                                                             {% csrf_token %}
                                                             {{ comment_form | crispy }}
-                                                            <input type="submit" value="ارسال">
+                                                            <input type="submit" value="{% trans 'Send' %}">
                                                         </form>
                                                     </div>
                                                 </div>
