--- a/templates/_base.html
+++ b/templates/_base.html
@@ -128,6 +128,14 @@
     </header>
     <!-- Header End -->
 
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
 {% block content %}
 
 {% endblock %}
