--- a/templates/_base.html
+++ b/templates/_base.html
@@ -131,7 +131,7 @@
     {% if messages %}
         <div class="cantainer">
             {% for message in messages %}
-                <div class="alert alert-{{ message-tags }}">{{ message }}</div>
+                <div class="alert alert-{{ message.tags }}">{{ message }}</div>
             {% endfor %}
         </div>
     {% endif %}
