--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -46,18 +46,18 @@
                                                     </td>
                                                     <td class="product-price">
                                                                 <span class="product-price-wrapper">
-                                                                    <span class="money">۱۴۸,۰۰۰ تومان</span>
+                                                                    <span class="money">{{ item.product_obj.price }}</span>
                                                                 </span>
                                                     </td>
                                                     <td class="product-quantity">
                                                         <div class="quantity">
                                                             <input type="number" class="quantity-input" name="qty"
-                                                                   id="qty-1" value="2" min="1">
+                                                                   id="qty-1" value="{{ item.quantity }}" min="1">
                                                         </div>
                                                     </td>
                                                     <td class="product-total-price">
                                                                 <span class="product-price-wrapper">
-                                                                    <span class="money">۲۹۶,۰۰۰ تومان</span>
+                                                                    <span class="money">{{ item.product_obj.price }}</span>
                                                                 </span>
                                                     </td>
                                                 </tr>
