--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -47,11 +47,14 @@
                                 <div class="product-action d-flex align-items-sm-center align-content-center mb--30">
                                     <form action="{% url 'cart:cart_add' product.id %}" method="POST">
                                         {% csrf_token %}
-                                        <div class="quantity">
-                                            <input type="number" class="quantity-input" name="quantity" id="qty"
-                                                   value="1" min="1" max="30">
+                                        <div class="quantity-wrapper d-flex justify-content-start">
+                                            <div class="quantity">
+                                                <input type="number" class="quantity-input" name="quantity" id="qty" value="1" min="1" max="30">
+                                            </div>
+                                            <button type="submit" class="btn btn-small btn-bg-red btn-color-white btn-hover-2">
+                                                {% trans 'Add to Cart' %}
+                                            </button>
                                         </div>
-                                        <button class="btn" type="submit">{% trans 'Add To Cart' %}</button>
                                     </form>
                                 </div>
                                 <div class="product-footer-meta mt-5 pt-5">
