--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -31,7 +31,7 @@
                                             <tbody>
                                             {% for item in cart %}
                                                 <tr>
-                                                    <td class="product-remove text-left"><a href=""><i
+                                                    <td class="product-remove text-left"><a href="{% url 'cart:cart_remove' item.product_obj.id %}"><i
                                                             class="flaticon flaticon-cross"></i></a></td>
                                                     <td class="product-thumbnail text-left">
                                                         <img src="assets/img/products/prod-10-70x88.jpg"
@@ -39,7 +39,7 @@
                                                     </td>
                                                     <td class="product-name wide-column">
                                                         <h3>
-                                                            <a href="product-details.html">
+                                                            <a href="{{ item.product_obj.get_absolute_url }}">
                                                                 {{ item.product_obj.title }}
                                                             </a>
                                                         </h3>
