show total price in cart_detail

--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -61,7 +61,7 @@
                                                     </td>
                                                     <td class="product-total-price">
                                                                 <span class="product-price-wrapper">
-                                                                    <span class="money">{{ item.product_obj.price }}</span>
+                                                                    <span class="money">{{ item.total_price }}</span>
                                                                 </span>
                                                     </td>
                                                 </tr>
