--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -15,6 +15,7 @@
                     <div class="col-lg-8 mb-md--50">
                             <div class="row no-gutters">
                                 <div class="col-12">
+                                {% if cart %}
                                     <div class="table-content table-responsive">
                                         <table class="table text-center">
                                             <thead>
@@ -69,6 +70,10 @@
                                             </tbody>
                                         </table>
                                     </div>
+                                {% else %}
+                                    <p>{% trans 'Cart is empty! Please add some product to the cart' %}</p>
+                                    <a href="{% url 'product_list' %}">{% trans 'Go shopping' %}</a>
+                                {% endif %}
                                 </div>
                             </div>
                             <div class="row no-gutters border-top pt--20 mt--20">
@@ -82,21 +87,21 @@
                             <div class="cart-totals">
                                 <h5 class="font-size-14 font-bold mb--15">مجموع</h5>
                                 <div class="cart-calculator">
-                                    <div class="cart-calculator__item">
-                                        <div class="cart-calculator__item--head">
-                                            <span>مجموع</span>
-                                        </div>
-                                        <div class="cart-calculator__item--value">
-                                            <span>۳۴۶,۰۰۰ تومان</span>
-                                        </div>
-                                    </div>
+{#                                    <div class="cart-calculator__item">#}
+{#                                        <div class="cart-calculator__item--head">#}
+{#                                            <span>مجموع</span>#}
+{#                                        </div>#}
+{#                                        <div class="cart-calculator__item--value">#}
+{#                                            <span>۳۴۶,۰۰۰ تومان</span>#}
+{#                                        </div>#}
+{#                                    </div>#}
                                     <div class="cart-calculator__item order-total">
                                         <div class="cart-calculator__item--head">
                                             <span>جمع کل</span>
                                         </div>
                                         <div class="cart-calculator__item--value">
                                                 <span class="product-price-wrapper">
-                                                    <span class="money">۳۴۶,۰۰۰ تومان</span>
+                                                    <span class="money">{{ cart.get_total_price }} تومان</span>
                                                 </span>
                                         </div>
                                     </div>
@@ -112,5 +117,4 @@
         </div>
     </div>
     <!-- Main Content Wrapper Start -->
-
 {% endblock %}
