--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
@@ -96,18 +97,21 @@
                                         <i class="flaticon flaticon-user"></i>
                                     </a>
                                     <ul class="user-info-menu">
-                                        <li>
-                                            <a class="text-right" href="my-account.html">حساب کاربری</a>
-                                        </li>
-                                        <li>
-                                            <a class="text-right" href="cart.html">سبد خرید</a>
-                                        </li>
-                                        <li>
-                                            <a class="text-right" href="wishlist.html">علاقه مندی ها</a>
-                                        </li>
-                                        <li>
-                                            <a class="text-right" href="order-tracking.html">تاریخچه سفارشات</a>
-                                        </li>
+                                        {% if user.is_authenticated %}
+                                            <li>
+                                                <a class="text-right" href="{% url 'account_logout' %}">{% trans 'Logout' %}</a>
+                                            </li>
+                                            <li>
+                                                <a class="text-right" href="profile.html">{% trans 'Profile' %}</a>
+                                            </li>
+                                        {% else %}
+                                            <li>
+                                                <a class="text-right" href="{% url 'account_login' %}">{% trans 'Login' %}</a>
+                                            </li>
+                                            <li>
+                                                <a class="text-right" href="{% url 'account_signup' %}">{% trans 'Signup' %}</a>
+                                            </li>
+                                        {% endif %}
                                     </ul>
                                 </li>
                                 <li class="header-toolbar__item">
